[project]
name = "vram-overlay"
description = "Professional VRAM monitoring overlay for ComfyUI that displays real-time GPU memory usage as an independent, non-intrusive window. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# MVU VRAM Overlay - Dependencies", "# ===============================", "# Графический интерфейс (GUI)", "# Используется для отрисовки прозрачного окна оверлея поверх других окон.", "PyQt6>=6.5.0", "# Мониторинг системных процессов", "# Используется для отслеживания PID процесса ComfyUI и автоматического закрытия оверлея.", "psutil>=5.9.5", "# Взаимодействие с драйвером NVIDIA (NVML)", "# Официальная библиотека NVIDIA для получения точных данных о видеопамяти (VRAM).", "# Предоставляет модуль 'pynvml'.", "nvidia-ml-py>=12.535.133"]

[project.urls]
Repository = "https://github.com/Maenvaeru/comfyui-vram-overlay"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Maenvaeru/comfyui-vram-overlay/wiki"
"Bug Tracker" = "https://github.com/Maenvaeru/comfyui-vram-overlay/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-vram-overlay"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

