[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-vram-overlay"
version = "1.0.0"
description = "A professional, standalone VRAM monitor overlay for ComfyUI (MVU)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Maenvaeru" }
]
keywords = ["comfyui", "vram", "overlay", "monitor", "nvidia", "gpu", "qt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Multimedia :: Graphics",
]

# Зависимости
dependencies = [
    "PyQt6>=6.5.0",
    "psutil>=5.9.5",
    "nvidia-ml-py>=12.535.133",
]

[project.urls]
Repository = "https://github.com/Maenvaeru/comfyui-vram-overlay"
# Bug Tracker = "https://github.com/Maenvaeru/comfyui-vram-overlay/issues"

[tool.setuptools]
packages = ["."]

[tool.comfy]
# ИСПРАВЛЕНИЕ: Ключи должны начинаться с большой буквы (PascalCase)
PublisherId = "Maenvaeru"
DisplayName = "MVU VRAM Overlay"
Icon = "https://raw.githubusercontent.com/Maenvaeru/comfyui-vram-overlay/main/icon.png"

